# Copyright 2026 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# The targets in this file are used to allow child testers to function without
# the need for a full checkout. If a child tester opts in, the parent builder
# will package all data for the `test_trigger_cas_all` target into a CAS isolate
# for the child tester to download and extract.

group("test_trigger_cas_all") {
  write_runtime_deps = "$root_out_dir/test_trigger_cas_all.runtime_deps"

  data_deps = [
    ":test_trigger_cas_infra",
    ":test_trigger_cas_mb",
    ":test_trigger_cas_merge_scripts",
  ]
}

group("test_trigger_cas_infra") {
  data = [
    "//infra/config/generated/",
    "//infra/specs/",
  ]
}

group("test_trigger_cas_mb") {
  data = [
    "//build/gn_helpers.py",
    "//tools/mb/",
  ]
  data_deps = [ ":test_trigger_cas_python" ]
}

group("test_trigger_cas_merge_scripts") {
  data = [
    "//scripts/",
    "//src/tests/py_utils/",
    "//testing/merge_scripts/",
  ]
  data_deps = [ ":test_trigger_cas_python" ]
}

group("test_trigger_cas_python") {
  data = [ "//.vpython3" ]
}
